style.css
@import url("https://fonts.googleapis.com/css?family=Raleway:400,800i");

@font-face {
  font-family: "EarthOrbiter";
  src: url("./assets/EarthOrbiter/EarthOrbiter-YZ12.otf");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "Ubuntu";
  src: url("./assets/Ubuntu/Ubuntu-Light.ttf");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "Ubuntu-Bold";
  src: url("./assets/Ubuntu/Ubuntu-Bold.ttf");
  font-weight: bold;
  font-style: bold;
}


div {
  font-family: "Ubuntu";
  font-weight: normal;
  font-style: normal;
}

body {
  background-color: #1a1a1a;
  color: #e6e6e6;
  margin: 0;
  height: 100%;
  font-family: "Raleway", sans-serif;
  display: block;
  overflow-y: hidden;
}

#container {
  display: flex;
  width: 100vw;
}

.container {
  display: flex;
}

#track-container {
  padding-bottom: 20%;
  margin-bottom: 6em;
  display: inline-block;
}

.col {
  flex: 1;
}

.col img {
  max-width: 75%;
  text-align: center;
  margin: 0 auto;
  display: block;
}

nav ul {
  padding: 0;
}

#about ul,
#important-info ul {
  margin: 0;
  padding: 0;
}

#about ul li,
#important-info ul li {
  list-style: none;
  margin-bottom: 0.5em;
}

#about .col img {
  max-width: 50%;
}

#about ul li::before,
#important-info ul li::before {
  content: "\2022";
  color: white;
  font-size: 2.5em;
  vertical-align: middle;
  line-height: 0.5;
  margin: 0 0.125em 0 0.5em;
}

nav a {
  /*font-family: 'EarthOrbiter'; */
  font-weight: 800;
  /*font-style: italic;*/
  font-size: 1.5em;
  text-decoration: none;
  padding: 0.25em;
  color: #999;
  transition: 0.5s color;
}

a {
  color: white;
}

nav a.active span {
  /*color: #e6e6e6;*/
  /*background: linear-gradient(to right, #30CFD0 0%, #330867 100%);*/
  /*background: linear-gradient(to right, #ff7675 0%, #fab1a0, #fdcb6e, #00b894, #0984e3, #6c5ce7 100%);*/
  background: linear-gradient(
    to right,
    rgb(249, 247, 122) 0%,
    rgb(254, 198, 104),
    rgb(253, 150, 117),
    rgb(253, 113, 146),
    rgb(212, 96, 176),
    rgb(132, 97, 192) 100%
  );
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}


nav {
  height: 100vh;
  padding: 0.5em 2em;
  z-index: 100000;
}

#content {
  background: 
      url(assets/space/Stars_Stars.svg),
      url(assets/space/Blob_1_Blob_1.svg),
      url(assets/space/Planet_2_Planet_2.svg),
      url(assets/space/Planet_3_Planet_3.svg),
      url(assets/space/Blob_2_Blob_2.svg),
      url(assets/space/Blob_3_Blob_3.svg),
      url(assets/space/Planet_1_Planet_1.svg),
      rgba(48, 37, 62, 1);
  background-size: 100%,
  50%, 18%, 15%, 40%, 60%, 78%, cover;
  height: 100vh;
  flex: 1;
  background-repeat: repeat-y, no-repeat, no-repeat, no-repeat, no-repeat, no-repeat, no-repeat, no-repeat;
  overflow-y: scroll;
  overflow-x: hidden;
  background-position: 
      center, /*Stars*/
      -10% -50%, /*Blob 1*/
      75% 9%, /*Planet 2*/
      90% 80%,  /*Planet 3*/
      110% 15%, /*Blob 2*/
      110% 250%, /*Blob 3*/
      -90% -200%, /*Planet 1*/
      center; /*Background color*/
}

#content-wrapper {
  overflow: visible;
}

section:not(#home) {
  padding: 5%;
}

section:not(#home) > div {
  min-height: 50%;
  background-color: rgba(0, 0, 0, 0.8);
  padding: 2em 3em;
}

@media screen and (min-width: 601px) {
  section:not(#home) h1 {
    font-family: "EarthOrbiter";
    font-size: 3em;
    text-decoration: none;
  }
}

@media screen and (max-width: 600px) {
  section:not(#home) h1 {
    font-family: "EarthOrbiter";
    font-size: 2em;
    text-decoration: none;
  }
}

section:not(#home) p {
  font-size: 1.25em;
  /*color: #999;*/
}

#tracks .container .col .container .col:not(.track-description) {
  /* margin: auto 0; */
  font-size: 1.5em;
}

#tracks .container .col:not(:first-of-type) .container {
  flex-direction: row-reverse;
}

#tracks .container .container {
  position: relative;
}

.col.track-description {
  flex: 2;
  margin-top: 1em;
}

#tracks .container .container .col p {
  font-family: "EarthOrbiter";
}

#tracks .container .container .col:not(.track-title) {
  transition: 0.25s all;
}

#tracks .container .container:hover .col:not(.track-title) {
  opacity: 0;
}

#tracks .container .container:hover .track-text {
  opacity: 1;
}

.track-text {
  font-size: 1.2em;
  position: absolute;
  top: 0;
  left: 0;
  opacity: 0;
  transition: 0.25s all;
  height: 100%;
  width: 90%;
  padding: 0.25em;

  display: flex;
  justify-content: center;
  align-content: center;
  flex-direction: column;

  z-index: 10;
}

.track-text p {
  vertical-align: middle;
}

nav li {
  list-style: none;
}

h1,
h2,
h3 {
  font-weight: 800;
  /*font-style: italic; */
}

#home {
  text-align: center;
  width: 100%;
  height: 100%;
  margin-bottom: 2em;
  position: relative;
  margin: 0;
  align-content: center;
  justify-content: center;
  align-items: center;
}

#home h3 {
  font-size: 0.8em;
}

#splash-text > h1 {
  font-size: 4em;
}

#splash-text > * {
  display: block;
  margin: 0;
  text-align: center;
}

#splash-parent {
  align-content: center;
  justify-content: center;
  align-items: center;
}

#splash-text {
  padding: 0.5em 1em;
  margin-top: 25vh;
  margin-bottom: 15vh;
  text-transform: uppercase;
  display: inline-block;
  font-size: 1.5em;
  /*transform: translateY(-60%); */
  margin-right: auto;
  margin-left: auto;
}

#bucket {
  overflow: hidden;
  display: inline-block;
  align-items: center;
  justify-content: center;
}

#countdown {
  /* margin: 2.5em; */
  text-align: center;
  float: right;
  /* margin-bottom: 1em; */
  margin-right: 3em;
}

#countdown div {
  width: 1em;
  height: 1em;
  margin: 0.5em;
  background-color: rgba(0, 0, 0, 0.95);
  padding: 0.75em;
  padding-bottom: 1.25em;
  font-size: 2.5em;
  display: inline-block;
  text-align: center;
  margin-top: 1em;
}

#countdown div.register {
  width: auto;
  transition: 0.25s all;
}

#countdown div.register a {
  width: 100%;
}

.register {
  background-color: rgba(0, 0, 0, 0.95);
  padding: 0.5em 1em 0.5em 1em;
  font-size: 1.25em;
  margin: auto;
  width: fit-content;
  margin-bottom: 2em;
  margin-top: -2em;
}

.register:hover {
  transform: scale(1.1);
}


#countdown span::after {
  content: attr(id);
  font-size: 0.37em;
  display: block;
}

#hamburger-input {
  display: none;
}

#hamburger-label {
  display: none;
}

#schedule img {
  width: 50%;
  margin: 0 auto;
  display: block;
}

#schedule p {
  text-align: center;
}

#faq p:nth-of-type(2n - 1) {
  font-size: 1.25em;
  font-family: 'Ubuntu-Bold';
  padding-bottom: 0;
  margin-bottom: 0;
}

#faq p:nth-of-type(2n) {
  font-size: 1em;
  padding-bottom: 0.5em;
}

.sponsor-container {
  display: grid;
  grid-template-rows: repeat(2, 1fr);
  grid-template-columns: repeat(3, 1fr);
  justify-items: center;
  align-items: center;
  min-height: 50%;
  padding-top: 2em;
}

.sponsor-container a:first-of-type {
  grid-column: span 3;
  max-width: 35%;
}

.sponsor-container a {
  width: 75%;
  transition: 0.25s all;
}

.sponsor-container a:nth-of-type(2n):hover {
  transform: scale(1.05) rotate(-2deg);
}

.sponsor-container a:nth-of-type(2n + 1):hover {
  transform: scale(1.05) rotate(2deg);
}

/* Footer */
#footer {
  height: 5em;
  padding: 1em 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

#footer > div:nth-child(1) {
  width: 100%;
  display: flex;
  justify-content: space-around;
}

#social {
  display: flex;
  z-index: 1000;
}

#social img {
  height: 2em;
}

#social a {
  height: 2em;
  padding: 1em 0.5em 1em 0.5em;
}

#footer > div:nth-child(2) {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

@media only screen and (max-width: 1100px) {
  #about .container {
    /*flex-direction: column-reverse;*/
  }

  #about .container .col img {
    max-width: 40%;
  }

  #countdown {
    font-size: 0.7em;
    padding-bottom: 2em;
    /*text-align: center;*/
  }

  nav {
    font-size: 0.8em;
    position: absolute;
    top: 0;
    left: 0;
    z-index: 1000;
    padding: 0;
    margin: 0;
  }

  #hamburger-label {
    background-color: rgb(0, 0, 0);
    display: block;
    margin: 0;
    width: 5em;
    height: 5em;
    position: absolute;
    z-index: 2;
    cursor: pointer;
  }

  #hamburger-label div {
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
  }

  #hamburger-label span {
    width: 2em;
    height: 4px; /*the bars are not uniform height on ems for some reason; think it's a chrome bug or smthng idk*/
    background-color: white;
    display: block;
    /*border-radius: 0.25em;*/
    margin: 0.5em 0;
    transition: 0.25s;
  }

  nav ul {
    position: fixed;
    left: -100vw;
    font-size: 1.5em;
    text-align: center;
    width: 100vw;
    padding: 0;
    margin-top: 0;
    margin-left: 0;
    transition: 0.5s all;
    /*background-color: rgba(0, 0, 0, 0.9);*/
    background-color: #29223c;
    height: 100vh;
    top: 0;
  }

  nav ul {
    padding-top: 4em;
  }


  #hamburger-input:checked ~ ul {
    left: 0;
  }

  #hamburger-input:checked ~ #hamburger-label span:first-of-type {
    transform: translateY(0.8em) rotate(45deg);
  }

  #hamburger-input:checked ~ #hamburger-label span:last-of-type {
    transform: translateY(-0.8em) rotate(-45deg);
  }

  #hamburger-input:checked
    ~ #hamburger-label
    span:not(:first-of-type):not(:last-of-type) {
    opacity: 0;
  }

  #countdown div {
    width: 1em;
    height: 1em;
    /*float: initial;*/
  }

  #countdown div:not(.register) * {
    position: relative;
    top: -0.25em;
  }

  .track-text {
    font-size: 0.75em;
  }
}

@media only screen and (max-width: 700px) {
  .container {
    display: block;
  }
  .col:not(.track-description) {
    font-size: 0.5em;
  }

  .track-descrption {
    text-align: center;
    font-size: 0.5em;
  }

  .col:not(.track-description) p {
    margin: 0;
    padding: 0;
  }
  #track-container {
    padding-bottom: 10%;
    margin-bottom: 2em;
  }
  .track-text {
    font-size: 1em;
    /* text-align: center; */
  }
  .sponsor-container {
    display: block;
  }
  .sponsor-container a {
    display: block;
    margin: 5em auto;
  }
  .sponsor-container a:first-of-type {
    max-width: none;
  }
}

@media only screen and (max-width: 580px) {
  #splash-text {
    font-size: 0.8em;
  }

  #countdown {
    text-align: center;
    margin: auto;
    justify-content: center;
    align-items: center;
    width: 100%;
  }

  #countdown div:not(.register) {
    float: initial;
    width: 1em;
    padding: 0.5em;
    font-size: 2em;
    /* margin: auto; */
  }

  #countdown div.register {
    width: 2em;
    float: initial;
  }

  .register {
    padding: 0.25em 0.5em 0.25em 0.5em;
    widows: 1em;
    font-size: 1em;
    margin: auto;
    margin-bottom: 2em;
  }

  #faq p:nth-of-type(2n - 1) {
    font-size: 1em;
    font-family: 'Ubuntu-Bold';
    padding-bottom: 0;
    margin-bottom: 0;
  }
  
  #faq p:nth-of-type(2n) {
    font-size: 0.75em;
    padding-bottom: 0.5em;
  }

  .track-title {
    margin-bottom: 1.2em;
  }

  .track-text {
    margin-top: 1.75em;
  }

}

